--- a/fhotel_administration/public/index.html
+++ b/fhotel_administration/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>FHotel-Administrator</title>
 
   <!-- GLOBAL MAINLY STYLES-->
   <link href="%PUBLIC_URL%/html/dist/assets/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
